<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.benth.leaguedelta.MainActivity"
    >

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/search_form1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <AutoCompleteTextView
                android:id="@+id/summoner_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter"
                android:imeOptions="actionSearch"
                android:imeActionId="@+id/action_search"
                android:inputType="text"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownWidth="match_parent"
            android:entries="@array/regions"
            android:spinnerMode="dropdown"
            />

        <Button
            android:id="@+id/search_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/search"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@null"
            android:maxWidth="0dp"
            android:scaleType="fitEnd"
            android:src="@null"
            />


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:background="@null"
            >

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:contentDescription="@string/challenger"
                android:maxHeight="30dp"
                android:maxWidth="30dp"
                android:scaleType="fitEnd"
                android:src="@drawable/settings"
                />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>

