<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="com.example.benth.leaguedelta.Matchup$SummonerFragment">

    <ImageView
        android:id="@+id/summoner_icon"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src = "@drawable/invalid"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:padding="0dp"
        android:contentDescription="@string/icon_desc"
        />

    <TextView
        android:id="@+id/summoner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:layout_toEndOf="@id/summoner_icon"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        />

    <ImageView
        android:id="@+id/mastery_rank"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/icon_desc"
        android:src = "@drawable/invalid"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:padding="0dp"
        android:layout_below="@id/summoner_icon"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />

    <TextView
        android:id="@+id/mastery_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/loading"
        android:layout_alignTop="@id/mastery_rank"
        android:layout_toEndOf="@id/mastery_rank"
        android:layout_alignBottom="@id/mastery_rank"
        android:gravity="start|center"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        />

    <ImageView
        android:id="@+id/soloqueue_rank"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/icon_desc"
        android:src = "@drawable/invalid"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:padding="0dp"
        android:layout_below="@id/mastery_rank"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />

    <TextView
        android:id="@+id/soloqueue_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/loading"
        android:layout_alignTop="@id/soloqueue_rank"
        android:layout_toEndOf="@id/soloqueue_rank"
        android:layout_alignBottom="@id/soloqueue_rank"
        android:gravity="start|center"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        />

    <ImageView
        android:id="@+id/info1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/fire_desc"
        android:layout_toEndOf="@id/summoner_icon"
        android:layout_alignBottom="@id/summoner_icon"
        android:layout_marginStart="16dp"
        android:padding="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/fire"
        />

    <ImageView
        android:id="@+id/info2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/cold_desc"
        android:layout_toEndOf="@id/info1"
        android:layout_alignBottom="@id/summoner_icon"
        android:layout_marginStart="16dp"
        android:padding="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/cold"
        />

    <ImageView
        android:id="@+id/info3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/tilted_desc"
        android:layout_toEndOf="@id/info2"
        android:layout_alignBottom="@id/summoner_icon"
        android:layout_marginStart="16dp"
        android:padding="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/tilted"
        />


    <TextView
        android:id="@+id/mastery_points_champ_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:text="@string/loading"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mastery1"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/mastery_points_champ_1"
        android:src="@drawable/invalid"
        app:border_color="@color/gold"
        app:border_width="7dp"
        app:border_overlay="true"
        />

    <TextView
        android:id="@+id/mastery_points_champ_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_alignStart="@+id/mastery2"
        android:layout_alignEnd="@+id/mastery2"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mastery2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/invalid"
        android:layout_above="@id/mastery_points_champ_2"
        app:border_color="@color/silver"
        app:border_width="7dp"
        app:border_overlay="true"
        />

    <TextView
        android:id="@+id/mastery_points_champ_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/loading"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_alignStart="@+id/mastery3"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mastery3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/mastery_points_champ_3"
        android:src="@drawable/invalid"
        app:border_color="@color/bronze"
        app:border_width="7dp"
        app:border_overlay="true"
        />

    <ImageView
        android:id="@+id/mastery3_level"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/mastery_points_champ_3"
        android:src="@drawable/mastery7"
        android:padding="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/icon_desc"
        />
    <ImageView
        android:id="@+id/mastery2_level"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@id/mastery_points_champ_2"
        android:src="@drawable/mastery7"
        android:padding="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/icon_desc"
        />
    <ImageView
        android:id="@+id/mastery1_level"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@id/mastery_points_champ_1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/mastery7"
        android:padding="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/icon_desc"
        />

</RelativeLayout>
