<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="com.example.benth.leaguedelta.Matchup$MatchupFragment">

    <ScrollView
        android:id="@+id/scroll_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/opponent"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:src="@drawable/invalid"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:padding="0dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/icon_desc"
                />

            <TextView
                android:id="@+id/champ_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invalid"
                android:textSize="35sp"
                android:layout_toEndOf="@+id/opponent"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:elegantTextHeight="true"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                />

            <ImageView
                android:id="@+id/passive_icon"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:padding="0dp"
                android:layout_below="@id/opponent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:contentDescription="@string/icon_desc"
                />

            <TextView
                android:id="@+id/p_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:text=""
                android:layout_alignTop="@+id/passive_icon"
                android:layout_toEndOf="@+id/passive_icon"
                android:layout_alignBottom="@id/passive_icon"
                android:gravity="start|center"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                />

            <ImageView
                android:id="@+id/q_icon"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/invalid"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:padding="0dp"
                android:layout_below="@id/passive_icon"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:contentDescription="@string/icon_desc"
                />

            <Button
                android:id="@+id/cdr10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="75dp"
                android:layout_alignTop="@id/opponent"
                android:layout_alignBottom="@id/q_icon"
                android:text="@string/plus10"
                style="@style/Widget.AppCompat.Button.Colored"
                />

            <Button
                android:id="@+id/cdr20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="75dp"
                android:layout_alignTop="@id/opponent"
                android:layout_alignBottom="@id/q_icon"
                android:layout_centerHorizontal="true"
                android:text="@string/plus20"
                style="@style/Widget.AppCompat.Button.Colored"
                />

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="75dp"
                android:layout_alignTop="@id/opponent"
                android:layout_alignBottom="@id/q_icon"
                android:text="@string/reset"
                android:layout_alignParentEnd="true"
                style="@style/Widget.AppCompat.Button.Colored"
                />

            <TextView
                android:id="@+id/current_cdr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_cdr"
                android:layout_alignBottom="@id/opponent"
                android:layout_toEndOf="@id/opponent"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/q_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/loading"
                android:layout_alignTop="@+id/q_icon"
                android:layout_toEndOf="@+id/q_icon"
                android:layout_alignBottom="@id/q_icon"
                android:gravity="start|center"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                />

            <ImageView
                android:id="@+id/w_icon"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/invalid"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:padding="0dp"
                android:layout_below="@id/q_icon"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:contentDescription="@string/icon_desc"
                />

            <TextView
                android:id="@+id/w_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/loading"
                android:layout_alignTop="@+id/w_icon"
                android:layout_toEndOf="@+id/w_icon"
                android:layout_alignBottom="@id/w_icon"
                android:gravity="start|center"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                />

            <ImageView
                android:id="@+id/e_icon"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/invalid"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:padding="0dp"
                android:layout_below="@id/w_icon"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:contentDescription="@string/icon_desc"
                />

            <TextView
                android:id="@+id/e_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/loading"
                android:layout_alignTop="@+id/e_icon"
                android:layout_toEndOf="@+id/e_icon"
                android:layout_alignBottom="@id/e_icon"
                android:gravity="start|center"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                />

            <ImageView
                android:id="@+id/r_icon"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/invalid"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:padding="0dp"
                android:layout_below="@id/e_icon"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:contentDescription="@string/icon_desc"
                />

            <TextView
                android:id="@+id/r_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/loading"
                android:layout_alignTop="@+id/r_icon"
                android:layout_toEndOf="@+id/r_icon"
                android:layout_alignBottom="@id/r_icon"
                android:gravity="start|center"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                />

            <TextView
                android:id="@+id/ss1_cd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:elegantTextHeight="true"
                android:layout_below="@id/r_icon"
                android:gravity="center"
                android:drawableTop="@drawable/i0"
                android:padding="5dp"
                android:textAlignment="center"
                android:scaleX=".85"
                android:scaleY=".85"
                />

             <TextView
                 android:id="@+id/ss2_cd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/loading"
                 android:textSize="25sp"
                 android:textColor="@color/colorPrimaryDark"
                 android:elegantTextHeight="true"
                 android:layout_below="@id/r_icon"
                 android:layout_centerHorizontal="true"
                 android:gravity="center"
                 android:drawableTop="@drawable/i0"
                 android:padding="5dp"
                 android:textAlignment="center"
                 android:scaleX=".85"
                 android:scaleY=".85"
                 />

            <TextView
                android:id="@+id/keystone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:layout_alignParentEnd="true"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:elegantTextHeight="true"
                android:layout_below="@id/r_icon"
                android:gravity="center"
                android:drawableTop="@drawable/i0"
                android:padding="5dp"
                android:textAlignment="center"
                android:scaleX=".85"
                android:scaleY=".85"
                tools:ignore="RelativeOverlap" />

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/icon_desc"
                android:src="@drawable/back_arrow"
                android:background="@null"
                android:scaleType="centerCrop"
                android:layout_below="@id/ss1_cd"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
